added time for how long it took to get bingo to win message